# flaskbs

./: .gitignore  README.md  pyproject.toml  wsgi.py
.docker/: Dockerfile
.docker/development/: docker-compose.yml
.github/workflows/: python-app.yml
api/endpoints/: user.py
flaskbs/: __init__.py
flaskbs/api/endpoints/: user.py
flaskbs/core/: config.py
flaskbs/models/: __init__.py
flaskbs/schemas/: user.py
migrations/: env.py
migrations/versions/: 36044f293bef_initial_migration.py  c1aa69e32c53_initial_migration.py
models/: user.py
schemas/: user.py
tests/: conftest.py
tests/api/: test_hello_world.py  test_user.py
